fe(editor): fix resume import z-index

--- a/front-end/pages/resumes/[id]/edit/styles.module.scss
+++ b/front-end/pages/resumes/[id]/edit/styles.module.scss
@@ -1,4 +1,4 @@
 .resume-import{
   position: relative;
-  z-index: 99;
+  z-index: 10;
 }
